Hide disabled collectors from admin status
